luci-theme-morseargon: (APP-3466, PR #855) Fix password reveal icon overlapping in safari browser
Approved-by: James Haggerty
Approved-by: Evan Benn

--- a/luci/luci-theme-morseargon/htdocs/luci-static/morseargon/css/cascade.css
+++ b/luci/luci-theme-morseargon/htdocs/luci-static/morseargon/css/cascade.css
@@ -439,6 +439,26 @@ h5 {
   pointer-events: none;
 }
 
+/*
+* In Edge, the input type 'password' triggers a password reveal icon,
+* while Safari displays an auto-fill icon. Both overlap with the
+* password reveal icon, causing a visual issue.
+* Nesting styles within the login page or combining the two styling
+* solutions does not resolve the overlap effectively in Safari.
+*/
+input[type="password"]::-ms-reveal {
+  display: none;
+}
+
+input[type="password"]::-webkit-credentials-auto-fill-button {
+  visibility: hidden;
+  display: none !important;
+  pointer-events: none;
+  height: 0;
+  width: 0;
+  margin: 0;
+}
+
 /***********************
 *
 *  Login Page
@@ -607,10 +627,6 @@ h5 {
             margin-bottom: 2rem;
             position: relative;
             flex-grow: 1;
-          }
-
-          input[type="password"]::-ms-reveal {
-            display: none;
           }
         }
 
